Added Icon to forms and NotfiyIcon

--- a/Lockdown/Lockdown.csproj
+++ b/Lockdown/Lockdown.csproj
@@ -94,6 +94,7 @@
   <ItemGroup />
   <ItemGroup>
     <Content Include="Resources\Images\TestLogo.png" />
+    <Content Include="Resources\Images\TestLogoInvert.ico" />
     <Content Include="Resources\Images\TestLogoInvert.png" />
     <Content Include="Resources\Images\TestLogo_Cheeseman.png" />
   </ItemGroup>
