--- a/Lockdown/Lockdown.csproj
+++ b/Lockdown/Lockdown.csproj
@@ -47,6 +47,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BlockedApp.cs" />
+    <Compile Include="frmAddReminder.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAddReminder.Designer.cs">
+      <DependentUpon>frmAddReminder.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -80,6 +86,10 @@
     <Compile Include="Profiles.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reminder.cs" />
+    <EmbeddedResource Include="frmAddReminder.resx">
+      <DependentUpon>frmAddReminder.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
     </EmbeddedResource>
@@ -121,6 +131,7 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <Content Include="Resources\Data\Reminders\Reminders.txt" />
     <Content Include="Resources\Images\LockdownIcon.ico" />
     <Content Include="Resources\Images\TestLogo_Cheeseman %281%29.png" />
     <Content Include="Resources\Images\TestLogo_Cheeseman.png" />
