--- a/Lockdown/Lockdown.csproj
+++ b/Lockdown/Lockdown.csproj
@@ -47,6 +47,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BlockedApp.cs" />
+    <Compile Include="frmAddProfile.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAddProfile.Designer.cs">
+      <DependentUpon>frmAddProfile.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmAddReminder.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -93,6 +99,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reminder.cs" />
+    <EmbeddedResource Include="frmAddProfile.resx">
+      <DependentUpon>frmAddProfile.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmAddReminder.resx">
       <DependentUpon>frmAddReminder.cs</DependentUpon>
     </EmbeddedResource>
