--- a/Lockdown/Lockdown.csproj
+++ b/Lockdown/Lockdown.csproj
@@ -130,10 +130,19 @@
     <Compile Include="frmSettings.Designer.cs">
       <DependentUpon>frmSettings.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmTabbed.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmTabbed.Designer.cs">
+      <DependentUpon>frmTabbed.cs</DependentUpon>
+    </Compile>
     <Compile Include="Profiles.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reminder.cs" />
+    <Compile Include="TablessControl.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <EmbeddedResource Include="frmAddProfile.resx">
       <DependentUpon>frmAddProfile.cs</DependentUpon>
     </EmbeddedResource>
@@ -160,6 +169,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmSettings.resx">
       <DependentUpon>frmSettings.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmTabbed.resx">
+      <DependentUpon>frmTabbed.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
